# emscriptmake

./: .gitignore  CMakeLists.txt  README.md  test.html
include/: someclass.h
src/: main.cpp
